# NESO-Particles

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_docs.yaml
cmake/: Config.cmake.in  SYCL.cmake  check-file-list.cmake  neso-particles-config.cmake  remove-file.cmake  restrict-keyword.cmake  vendor-libraries.cmake
docs/: Makefile  README.md  build_branch_docs.sh  generate_versions_json.py  get_example_sources.sh  redirect_index.html  switcher.json
docs/doxygen/: Doxyfile  Makefile
docs/sphinx/: requirements.txt
include/: access.hpp  boundary_conditions.hpp  cartesian_mesh.hpp  cell_binning.hpp  cell_dat.hpp  cell_dat_compression.hpp  cell_dat_move.hpp  cell_dat_move_impl.hpp  communication.hpp  compute_target.hpp  departing_particle_identification.hpp  departing_particle_identification_impl.hpp  domain.hpp  global_mapping.hpp  global_mapping_impl.hpp  global_move.hpp  global_move_exchange.hpp  local_mapping.hpp  local_move.hpp  mesh_hierarchy.hpp  mesh_interface.hpp  mesh_interface_local_decomp.hpp  neso_particles.hpp  packing_unpacking.hpp  parallel_initialisation.hpp  particle_dat.hpp  particle_group.hpp  particle_group_impl.hpp  particle_io.hpp  particle_remover.hpp  particle_set.hpp  particle_spec.hpp  particle_sub_group.hpp  profiling.hpp  typedefs.hpp  utility.hpp  utility_mesh_hierarchy_plotting.hpp
include/communication/: communication_edges_counter.hpp
include/containers/: blocked_binary_tree.hpp  cell_dat.hpp  cell_dat_const.hpp  cell_data.hpp  descendant_products.hpp  global_array.hpp  int_key_value_map.hpp  local_array.hpp  product_matrix.hpp  sym_vector.hpp  sym_vector_helpers.hpp
include/loop/: access_descriptors.hpp  particle_loop.hpp  particle_loop_base.hpp  particle_loop_index.hpp  pli_particle_dat.hpp
include/mesh_hierarchy_data/: mesh_hierarchy_container.hpp  mesh_hierarchy_data.hpp  serial_container.hpp  serial_interface.hpp
include/neso_particles/: access.hpp  boundary_conditions.hpp  boundary_interaction_specification.hpp  cartesian_mesh.hpp  cell_binning.hpp  cell_dat_compression.hpp  cell_dat_move.hpp  cell_dat_move_impl.hpp  common_impl.hpp  communication.hpp  compute_target.hpp  departing_particle_identification.hpp  departing_particle_identification_impl.hpp  device_atomic_sanity_check.hpp  device_buffers.hpp  device_functions.hpp  device_limits.hpp  domain.hpp  error_propagate.hpp  global_mapping.hpp  global_mapping_impl.hpp  global_move.hpp  global_move_exchange.hpp  local_mapping.hpp  local_move.hpp  mesh_hierarchy.hpp  mesh_interface.hpp  mesh_interface_local_decomp.hpp  packing_unpacking.hpp  parallel_initialisation.hpp  parameters.hpp  particle_dat.hpp  particle_dat_direct_access.hpp  particle_group.hpp  particle_group_impl.hpp  particle_group_pointer_map.hpp  particle_group_temporary.hpp  particle_io.hpp  particle_remover.hpp  particle_set.hpp  (+7 more)
scripts/formatting/: create_src_file.py  format_all.sh
scripts/particle_loop_args_stats/: print_particle_loop_args_stats.py
scripts/profile_region_conversion/: README.md  profile_region_conversion.py
scripts/profile_region_plotting/: README.md  profile_region_plotting.py
src/: boundary_interaction_specification.cpp  cartesian_mesh.cpp  cell_dat_compression.cpp  cell_dat_move.cpp  compute_target.cpp  departing_particle_identification.cpp  device_limits.cpp  global_mapping.cpp  mesh_hierarchy.cpp  packing_unpacking.cpp  parallel_initialisation.cpp  particle_dat.cpp  particle_group.cpp  particle_group_pointer_map.cpp  particle_group_temporary.cpp  particle_io.cpp  particle_set.cpp  utility.cpp  utility_mesh_hierarchy_plotting.cpp
src/algorithms/: cellwise_methods.cpp  common.cpp  particle_data_movement.cpp  reduce_dat_cellwise.cpp  unseen_value_extractor.cpp
src/boundary/: boundary_interaction_specification.cpp  boundary_mesh_interface.cpp  (+2 more)
test/: CMakeLists.txt  Makefile  main.cpp  test_algorithms_a.cpp  test_algorithms_b.cpp  test_algorithms_c.cpp  test_algorithms_dsmc.cpp  test_algorithms_dsmc_no_replacement.cpp  test_algorithms_unseen_value_extractor.cpp  test_boundary_mesh_interface_a.cpp  test_boundary_pbc.cpp  test_boundary_reflection.cpp  test_boundary_truncation.cpp  test_buffers.cpp  test_cartesian_h_mesh.cpp  test_cartesian_h_mesh_surface_functions.cpp  test_cartesian_h_mesh_surface_functions_integration.cpp  test_cell_dat.cpp  test_communication.cpp  test_copy_selector.cpp  test_device_functions.cpp  test_ephemeral_dats.cpp  test_error_propagate.cpp  test_examples.cpp  test_examples_b.cpp  test_external_common.cpp  test_global_array.cpp  test_int_key_value_map.cpp  test_local_array.cpp  test_local_decomp_mesh.cpp  test_mesh_hierarchy.cpp  test_packing_unpacking.cpp  test_parallel_initialisation.cpp  test_particle_dat.cpp  test_particle_group.cpp  test_particle_group_b.cpp  test_particle_group_cell_move.cpp  test_particle_group_global_move.cpp  test_particle_group_hybrid_move.cpp  test_particle_group_local_move.cpp  (+56 more)
test/example_sources/: example_cell_dat_const_loop_element_wise.hpp  example_cell_wise_broadcast.hpp  example_particle_descendant_products.hpp  example_particle_loop_0.hpp  example_particle_loop_0_nc.hpp  example_particle_loop_cell_dat_const.hpp  example_particle_loop_cell_dat_const_reduction.hpp  example_particle_loop_cell_info_npart.hpp  example_particle_loop_global_array.hpp  example_particle_loop_index.hpp  example_particle_loop_local_array.hpp  example_particle_loop_low_level_0.hpp  example_particle_loop_nd_local_array.hpp  example_particle_loop_rng.hpp  example_particle_loop_sym_vector.hpp  example_particle_sub_group_creation.hpp  example_particle_sub_group_creation_specific.hpp  example_particle_sub_group_loop.hpp  example_profile_regions.hpp
test/include/: test_base.hpp  test_neso_particles.hpp  test_particle_group.hpp  test_particle_sub_group.hpp
test/test_resources/dmplex/: mesh_hypnotoad.msh
test/test_resources/gmsh/: mesh_hypnotoad_anticlockwise_vertices.msh  mesh_ring.msh  reference_all_types_square_0.2.msh
tests/: Makefile  test_cell_dat.cpp  test_main.cpp  test_mesh_heirarchy.cpp  test_particle_dat.cpp
(+235 files in other folders)
